# GPU-Programming

./: README.md  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
AS1 (copy)/: diff_image_cpp.txt
AS1 (copy)/ex1/: CMakeCache.txt  Makefile  as22.files  cmake_install.cmake
AS1 (copy)/ex1/images/: im.pgm
AS1 (copy)/ex1/include/: device_renderer.cuh  device_renderer.h  plane.h  util.h
AS1/ex1/: CMakeCache.txt  GPU_AS1.files  GPU_AS1.includes  Makefile  cmake_install.cmake
AS2/: AS2.files  CMakeCache.txt  Illustrated People SPACE BADGE SWEATER - New In from Illustrated People UK.html  Makefile  cmake_install.cmake
AS2/Illustrated People SPACE BADGE SWEATER - New In from Illustrated People UK_files/: 4-3317.js  cGFyZW50LW1ldGFkYXRhLXNjcmlwdHMvdmlzdWFsc29mdC5jby51ay5qcw--  fbevents.js  insights.js  jquerypicturefillappendAroundmatchHeightjquery-cookiemodalmod.js  productphotoswipephotoswipe-ui-defaultquickbuysearchblank-161.js  script  upselling.css
AS2/images/: im.pgm
AS2/include/: device_renderer.h  geometry.h  image.h  material.h  parallel_renderer.h  perspective_camera.h  phong.h  sphere.h  util.h
AS2/src/: device_renderer.cpp  device_renderer.cu  intersection.cpp  main.cpp  parallel_renderer.cpp  phong.cpp
AS3/: CMakeLists.txt
AS3/src/: image.cpp  main.cpp
kernel/code/: CMakeLists.txt
reduction/: cuda_util.h  reduction.cu  reduction1.cu  reduction2.cu  reduction3.cu  reduction4.cu  reduction5.cu  reduction6.cu  reduction7.cu  reduction8.cu  reduction_cpu.cpp
tut5/tut5/: CMakeLists.txt
tut5_sol/tut5/: CMakeLists.txt
(+30 files in other folders)
